--- a/rmilter/Dockerfile
+++ b/rmilter/Dockerfile
@@ -1,7 +1,4 @@
-FROM alpine:edge
-
-RUN echo "@testing http://nl.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories \
- && apk add --no-cache rmilter@testing rsyslog
+FROM interlegis/alpine-rmilter
 
 COPY rmilter.conf /etc/rmilter.conf
 COPY rsyslog.conf /etc/rsyslog.conf
